--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,7 @@ edition = "2018"
 
 [dependencies]
 rocket = "0.4.6"
-serde = "1.0.117"
+serde = { version = "1.0.117", features = ["derive"] }
 serde_derive = "1.0.117"
+serde_json = "1.0.59"
+anyhow = "1.0.34"
