--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,8 @@ serde = { version = "1.0.117", features = ["derive"] }
 serde_derive = "1.0.117"
 serde_json = "1.0.59"
 anyhow = "1.0.34"
+
+[dependencies.rocket_contrib]
+version = "0.4.6"
+default-features = false
+features = ["tera_templates"]
