--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ serde = { version = "1.0.117", features = ["derive"] }
 serde_derive = "1.0.117"
 serde_json = "1.0.59"
 anyhow = "1.0.34"
+base64 = "0.13.0"
 
 [dependencies.rocket_contrib]
 version = "0.4.6"
