--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,4 @@ base64 = "0.13.0"
 [dependencies.rocket_contrib]
 version = "0.4.6"
 default-features = false
-features = ["tera_templates"]
+features = ["tera_templates", "serve"]
