--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ base64 = "0.13.0"
 version = "0.4.6"
 default-features = false
 features = ["tera_templates", "serve"]
+
+[dev-dependencies]
+pretty_assertions = "0.6.1"
