--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ serde_derive = "1.0.117"
 serde_json = "1.0.59"
 anyhow = "1.0.34"
 base64 = "0.13.0"
+inotify = "0.9.1"
 
 [dependencies.rocket_contrib]
 version = "0.4.6"
