--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 rocket = "0.4.10"
+rocket-include-static-resources = "0.9.6"
 serde = { version = "1.0.117", features = ["derive"] }
 serde_derive = "1.0.117"
 serde_json = "1.0.59"
