Speed up gallery for large number of images tremendously
OK, so a few issues here, but mostly just two:
1. We were returning every single image in its full size and quality
   (and therefore filesize) on index load. This sucks obviously, so we
   create thumbnails now and return those.
2. We were taking the lock, sleeping and only THEN unlocking it. This
   meant that Rocket could only return images in the split second it had
   before the loop re-looped and took the lock again.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ serde_json = "1.0.59"
 anyhow = "1.0.34"
 base64 = "0.13.0"
 inotify = "0.9.1"
+image = "0.23.14"
+dirs = "3.0.2"
 
 [dependencies.rocket_contrib]
 version = "0.4.10"
